--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -168,6 +168,106 @@
         <!-- Empowerment -->
         <div class="col-xl-2 col-sm-4 grid-item empowerment ">
           <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/adrian-chow.jpg">
+							<source src="ui/video/empowerment/adrian-chow.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Adrian Chow
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/chee-kok-lim.jpg">
+							<source src="ui/video/empowerment/chee-kok-lim.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Chee Kok Lim
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/grace-lee.jpg">
+							<source src="ui/video/empowerment/grace-lee.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Grace Lee
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/lily-lee.jpg">
+							<source src="ui/video/empowerment/lily-lee.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Lily Lee
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/luke-hsu.jpg">
+							<source src="ui/video/empowerment/luke-hsu.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Luke Hsu
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/michelle-eng.jpg">
+							<source src="ui/video/empowerment/michelle-eng.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Michelle Eng
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/phalla-sm.jpg">
+							<source src="ui/video/empowerment/phalla-sm.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Phalla SM
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/samantha-thong.jpg">
+							<source src="ui/video/empowerment/samantha-thong.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Samantha Thong
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/vuthda.jpg">
+							<source src="ui/video/empowerment/vuthda.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Vuthda
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/yeong-kein-aw.jpg">
+							<source src="ui/video/empowerment/yeong-kein-aw.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Yeong Kein AW
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
+          <div class="video-wrap">
             <video controls poster="ui/video/empowerment/fin_linda-so.jpg">
 							<source src="ui/video/empowerment/fin_linda-so.mp4" type="video/mp4">
 						</video>
