--- a/identity/sustainability.html
+++ b/identity/sustainability.html
@@ -284,7 +284,7 @@
               <!-- thumb 8 -->
               <div class="col-3">
                 <a href="#" class="thumb-wrap">
-                  <div class="hover-element new">
+                  <div class="hover-element">
                     <span class="label grey">Our values – Sustainability</span>
                     <div class="img-wrap"><img src="ui/images/thump-sustainability.jpg" alt="purpose"></div>
                     <div class="dt-wrap">
