added some more videos

--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -165,6 +165,206 @@
             </div>
           </div>
         </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/yumi-chen.jpg">
+							<source src="ui/video/integrity/yumi-chen.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Yumi Chen
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/sophearith-muny.jpg">
+							<source src="ui/video/integrity/sophearith-muny.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Sophearith Muny
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/sophanachan.jpg">
+							<source src="ui/video/integrity/sophanachan.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Sophana Chan
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/sokheang-nov.jpg">
+							<source src="ui/video/integrity/sokheang-nov.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Sokheang Nov
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/siti-aisyah-binti-hanafi.jpg">
+							<source src="ui/video/integrity/siti-aisyah-binti-hanafi.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Siti Aisyah Binti Hanafi
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/siew-lee-ngim.jpg">
+							<source src="ui/video/integrity/siew-lee-ngim.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Siew Lee Ngim
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/rithy-sar.jpg">
+							<source src="ui/video/integrity/rithy-sar.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Rithy Sar
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/loh-yi-wen.jpg">
+							<source src="ui/video/integrity/loh-yi-wen.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Loh Yi Wenoh Yi Wen
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/lee-yi-han.jpg">
+							<source src="ui/video/integrity/lee-yi-han.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Lee Yi han
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/krid-ruksiriphong.jpg">
+							<source src="ui/video/integrity/krid-ruksiriphong.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Krid Ruksiriphong
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/juthaporn-thaweesat.jpg">
+							<source src="ui/video/integrity/juthaporn-thaweesat.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Juthaporn Thaweesat
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/jocelyn-tai.jpg">
+							<source src="ui/video/integrity/jocelyn-tai.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Jocelyn Tai
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/jason_chen.jpg">
+							<source src="ui/video/integrity/jason_chen.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Jason Chen
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/hoa-dang.jpg">
+							<source src="ui/video/integrity/hoa-dang.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Hoa Dang
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/goh-jinn-wei.jpg">
+							<source src="ui/video/integrity/goh-jinn-wei.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Goh Jinn Wei
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/fumie-peng.jpg">
+							<source src="ui/video/integrity/fumie-peng.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Fumie Peng
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/edison-pan.jpg">
+							<source src="ui/video/integrity/edison-pan.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Edison Pan
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/darren-lo.jpg">
+							<source src="ui/video/integrity/darren-lo.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Darren Lo
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/aris-isa.jpg">
+							<source src="ui/video/integrity/aris-isa.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Aris Isa
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/aaron-ng.jpg">
+							<source src="ui/video/integrity/aaron-ng.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Aaron Ng
+            </div>
+          </div>
+        </div>
         <!-- Empowerment -->
         <div class="col-xl-2 col-sm-4 grid-item empowerment ">
           <div class="video-wrap">
@@ -485,6 +685,36 @@
         <!-- entrepreneurship -->
         <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
           <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/geraldine-kiew.jpg">
+							<source src="ui/video/entrepreneurship/geraldine-kiew.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Geraldine Kiew
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/brenda-lim.jpg">
+							<source src="ui/video/entrepreneurship/brenda-lim.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Brenda Lim
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/adrian-chow.jpg">
+							<source src="ui/video/entrepreneurship/adrian-chow.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Adrian Chow
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
+          <div class="video-wrap">
             <video controls poster="ui/video/entrepreneurship/cherry-lam.jpg">
 							<source src="ui/video/entrepreneurship/cherry-lam.mp4" type="video/mp4">
 						</video>
@@ -636,11 +866,17 @@
             </div>
           </div>
         </div>
-
-
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/muonmary-uch.jpg">
+							<source src="ui/video/sustainability/muonmary-uch.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Muonmary Uch
+            </div>
+          </div>
+        </div>
         <div class="clearfix"></div>
-
-
       </div>
     </div>
   </section>
