--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -45,7 +45,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
-        <a href="overview" class="navbar-brand ml-auto logo order-lg-last" data-menuanchor="firstPage"><img class="popimg" src="../ui/images/logo_dksh.svg" alt="DKSH"></a>
+        <a href="overview" class="navbar-brand ml-auto logo order-lg-last" data-menuanchor="firstPage"><img class="popimg" src="ui/images/logo_dksh.svg" alt="DKSH"></a>
         <div class="collapse navbar-collapse order-lg-first" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto navigator">
             <li class="nav-item">
