--- a/identity/integrity.html
+++ b/identity/integrity.html
@@ -289,7 +289,7 @@
               <!-- thumb 8 -->
               <div class="col-3">
                 <a href="sustainability" class="thumb-wrap ">
-                  <div class="hover-element new">
+                  <div class="hover-element">
                     <span class="label grey">Our values – Sustainability</span>
                     <div class="img-wrap"><img src="ui/images/thump-sustainability.jpg" alt="purpose"></div>
                     <div class="dt-wrap">
