--- a/identity/sustainability.html
+++ b/identity/sustainability.html
@@ -565,8 +565,8 @@
     <div class="row">
       <div class="col first-head">
         <div class="inner">
-          <h3 class="dksh-title-3">The winners of our entrepreneurship activity</h3>
-          <p>What does it take to be a successful entrepreneur?</p>
+          <h3 class="dksh-title-3">The winners of our sustainability activity</h3>
+          <p>How do you make DKSH a more sustainable company?</p>
         </div>
       </div>
       <!-- Cambodia -->
