--- a/identity.html
+++ b/identity.html
@@ -338,7 +338,7 @@
                       </section>
                     </div>
                   </div>
-                  <small class="indicator"></small>
+                  <small class="indicator current"></small>
                 </a>
               </div>
               <!-- thumb 1 -->
