--- a/identity/sustainability.html
+++ b/identity/sustainability.html
@@ -724,7 +724,7 @@
           <div class="inner">
             <article class="quote">
               <span class="icon"></span>
-              <p>I think that the reasonable use of time will enable DKSH to be more sustainable, e.g. by sticking to working hours without overtime.</p>
+              <p>I think that a reasonable use of time will enable DKSH to be more sustainabl company. For example, I can complete my work during working hours, which save company's resources (such as electricity costs). </p>
             </article>
             <p class="name">Yuan Bi Ying</p>
             <p class="place">Macau</p>
