--- a/identity.html
+++ b/identity.html
@@ -52,7 +52,7 @@
         <a class="anchor-scroll" href="#section-2" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="ID Overview"></a>
       </li>
       <li>
-        <a class="anchor-scroll" href="#section-3" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Favorite movements"></a>
+        <a class="anchor-scroll" href="#section-3" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Favorite moments"></a>
       </li>
       <li>
         <a class="anchor-scroll" href="#section-4" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Checklist"></a>
@@ -511,7 +511,7 @@
       <div class="row">
         <div class="col-lg-5 col-md-12">
           <h3 class="dksh-title-3 white">Thank you for your engagement!</h3>
-          <p class="dksh-title-4 white">Over the past eight weeks, we have explored the different elements which make up what we stand for and aim for as a company. Here are a some of our favorite moments!</p>
+          <p class="dksh-title-4 white">Over the past eight weeks, we have explored the different elements which make up what we stand for and aim for as a company. Here are some of our favorite moments!</p>
         </div>
         <div class="col-lg-7 col-md-12">
           <video controls poster="identity/ui/video/gmt_identity-round-up-video.jpg">
