--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -241,7 +241,7 @@
 							<source src="ui/video/integrity/loh-yi-wen.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Loh Yi Wenoh Yi Wen
+              Yi Wen Loh
             </div>
           </div>
         </div>
@@ -462,7 +462,7 @@
 							<source src="ui/video/empowerment/yeong-kein-aw.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Yeong Kein AW
+              Aw Yeong Kein
             </div>
           </div>
         </div>
@@ -544,7 +544,7 @@
 							<source src="ui/video/empowerment/victorcho.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              victorcho
+              Victor Cho
             </div>
           </div>
         </div>
@@ -557,7 +557,7 @@
 							<source src="ui/video/collaboration/abderrahmane-sairi.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              victorcho
+              Abderrahmane Sairi
             </div>
           </div>
         </div>
@@ -705,11 +705,31 @@
         </div>
         <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
           <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/maline-agm.jpg">
+							<source src="ui/video/entrepreneurship/maline-agm.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Maline Srun
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
+          <div class="video-wrap">
             <video controls poster="ui/video/entrepreneurship/adrian-chow.jpg">
 							<source src="ui/video/entrepreneurship/adrian-chow.mp4" type="video/mp4">
 						</video>
             <div class="name">
               Adrian Chow
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/natalie-chang.jpg">
+							<source src="ui/video/entrepreneurship/natalie-chang.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Natalie Chang
             </div>
           </div>
         </div>
