updated the naming

--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -181,7 +181,7 @@
 							<source src="ui/video/integrity/sophearith-muny.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Sophearith Muny
+              Sophearith Many
             </div>
           </div>
         </div>
@@ -432,7 +432,7 @@
 							<source src="ui/video/empowerment/phalla-sm.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Phalla SM
+              Sovanphalla Heang
             </div>
           </div>
         </div>
@@ -452,7 +452,7 @@
 							<source src="ui/video/empowerment/vuthda.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Vuthda
+              Vuthda Nim
             </div>
           </div>
         </div>
@@ -647,7 +647,7 @@
 							<source src="ui/video/collaboration/preksa.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Preksa
+              Preksa Vann
             </div>
           </div>
         </div>
@@ -657,7 +657,7 @@
 							<source src="ui/video/collaboration/somaly.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Somaly
+              Somaly Chhan
             </div>
           </div>
         </div>
@@ -779,7 +779,7 @@
 							<source src="ui/video/entrepreneurship/pheap-sm.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Pheap Sm
+              Souphornpheap Men
             </div>
           </div>
         </div>
@@ -789,7 +789,7 @@
 							<source src="ui/video/entrepreneurship/sovandy-sm.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Sovandy Sm
+              Sovandy Nang
             </div>
           </div>
         </div>
@@ -872,7 +872,7 @@
 							<source src="ui/video/sustainability/safety-khanisorn.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Safety Khanisorn
+              Khanisorn Thongchiew
             </div>
           </div>
         </div>
