--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -89,8 +89,8 @@
 
   <section class="video-wall-header">
     <div class="container">
-      <h1 class="dksh-title-3 white">What do our new values mean to you?</h1>
-      <p class="dksh-title-4 white">Employee voices on our new DKSH values</p>
+      <h1 class="dksh-title-3 white">What do our values mean to you?</h1>
+      <p class="dksh-title-4 white">Employee voices</p>
     </div>
   </section>
   <article class="breadcrumb">
@@ -558,6 +558,16 @@
 						</video>
             <div class="name">
               Abderrahmane Sairi
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/nitipholpiyakraivudh.jpg">
+							<source src="ui/video/collaboration/nitipholpiyakraivudh.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Nitiphol Piyakraivudh
             </div>
           </div>
         </div>
