added new video

--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -691,6 +691,97 @@
             </div>
           </div>
         </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/chun-fei.jpg">
+							<source src="ui/video/collaboration/chun-fei.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Chun Fei
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/eva.jpg">
+							<source src="ui/video/collaboration/eva.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Eva
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/hwa-lai.jpg">
+							<source src="ui/video/collaboration/hwa-lai.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Hwa Lai
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/jake-teoh.jpg">
+							<source src="ui/video/collaboration/jake-teoh.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Jake Teoh
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/jason-law.jpg">
+							<source src="ui/video/collaboration/jason-law.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Jason Law
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/mohamed-fazil.jpg">
+							<source src="ui/video/collaboration/mohamed-fazil.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Mohamed Fazil
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/sandra.jpg">
+							<source src="ui/video/collaboration/sandra.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Sandra
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/yeong-kein.jpg">
+							<source src="ui/video/collaboration/yeong-kein.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Yeong Kein
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/yvonne.jpg">
+							<source src="ui/video/collaboration/yvonne.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Yvonne
+            </div>
+          </div>
+        </div>
+
 
         <!-- entrepreneurship -->
         <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
@@ -813,6 +904,36 @@
             </div>
           </div>
         </div>
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/michelle-thoo.jpg">
+							<source src="ui/video/entrepreneurship/michelle-thoo.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Michelle Thoo
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/wong-keith-wayne.jpg">
+							<source src="ui/video/entrepreneurship/wong-keith-wayne.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Wong Keith Wayne
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/bernard.jpg">
+							<source src="ui/video/entrepreneurship/bernard.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Bernard
+            </div>
+          </div>
+        </div>
 
         <!-- sustainability -->
         <div class="col-xl-2 col-sm-4 grid-item sustainability">
@@ -906,6 +1027,68 @@
             </div>
           </div>
         </div>
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/farhan-shah.jpg">
+							<source src="ui/video/sustainability/farhan-shah.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Farhan Shah
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/jason-loo.jpg">
+							<source src="ui/video/sustainability/jason-loo.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Jason Loo
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/aaron-ng.jpg">
+							<source src="ui/video/sustainability/aaron-ng.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Aaron Ng
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/michelle-ng.jpg">
+							<source src="ui/video/sustainability/michelle-ng.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Michelle Ng
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/michael-chng.jpg">
+							<source src="ui/video/sustainability/michael-chng.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Michael Ch'ng
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/sharon-tan.jpg">
+							<source src="ui/video/sustainability/sharon-tan.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Sharon Tan
+            </div>
+          </div>
+        </div>
+
+
         <div class="clearfix"></div>
       </div>
     </div>
