updating the names

--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -472,7 +472,7 @@
 							<source src="ui/video/empowerment/fin_linda-so.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Jay Sern Chia
+              Linda So
             </div>
           </div>
         </div>
@@ -963,7 +963,7 @@
 							<source src="ui/video/sustainability/roathbopha-lim.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Roathbopha Lim
+              Rothbopha Lim
             </div>
           </div>
         </div>
