update chery name

--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -840,7 +840,7 @@
 							<source src="ui/video/entrepreneurship/cherry-lam.mp4" type="video/mp4">
 						</video>
             <div class="name">
-              Trang Dinh Van Le
+              Cherry Lam
             </div>
           </div>
         </div>
